[gd_scene load_steps=7 format=3 uid="uid://celd2q0qwqaxh"]

[ext_resource type="Script" path="res://Scenes/Aliens/alien_3.gd" id="1_6icnm"]
[ext_resource type="Texture2D" uid="uid://cuc6jhlhj7inn" path="res://Scenes/Aliens/squid.png" id="2_3n0ps"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6u7mq"]
size = Vector2(12, 8)

[sub_resource type="Animation" id="Animation_l3x1i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mkxot"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ljmml"]
_data = {
"RESET": SubResource("Animation_l3x1i"),
"walk": SubResource("Animation_mkxot")
}

[node name="Alien3" type="Area2D" groups=["alien"]]
collision_layer = 4
collision_mask = 19
script = ExtResource("1_6icnm")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_3n0ps")
hframes = 2

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, 5)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6u7mq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
libraries = {
"": SubResource("AnimationLibrary_ljmml")
}

[node name="SpeedUp" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="move_left" from="." to="." method="_on_move_left"]
[connection signal="move_right" from="." to="." method="_on_move_right"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SpeedUp" to="." method="_on_speed_up_timeout"]
